--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "symfony/console": "^3.0 || ^2.8",
         "symfony/filesystem": "^3.3",
         "twig/twig": "~1.0",
-        "zendframework/zend-i18n": "^2.7"
+        "zendframework/zend-i18n": "^2.7",
+        "zendframework/zend-servicemanager": "^3.3"
     },
     "require-dev": {
         "malukenho/docheader": "^0.1.5",
